@@ -117,6 +117,8 @@ The remaining arguments are optional:
 
 =item -secure
 
+=item -httponly
+
 =item -version
 
 =item -path
@@ -231,6 +233,28 @@ Get/set the cookie's secure flag.
 =for example_testing
     $cookie->secure(0);
     is $cookie->secure, 0, "secure";
+
+
+
+
+=head2 httponly
+
+    $cookie->httponly()
+    $cookie->httponly($set)
+
+
+Get/set the cookie's HttpOnly flag.
+
+=for example begin
+
+    $cookie->httponly(1);
+    ok $cookie->httponly == 1;
+
+=for example end
+
+=for example_testing
+    $cookie->httponly(0);
+    is $cookie->httponly, 0, "HttpOnly";
 
 
 
